# mia_randomforestclassifier

./: .gitignore  README.md
code/: .gitignore  CMakeLists.txt  batch.py  getMinMax.py  plot.py  plot_nodehistogram.py
code/source/: Multilabelseg.cpp  Multilabelseg.hpp  Node.h  NodeFactory.h  Program.cpp  Program.hpp  RFParameter.h  RFParams.h  RTParameter.h  RTParams.h  RandomForrest.h  RandomTree.h  SampleExtractor.cpp  SampleExtractor.h  SampleExtractor.hpp  main.cpp  utils.h
code/source/base/: CMakeLists.txt  Histogram.hpp  Label.hpp  LeafNode.hpp  Node.hpp  NodeFactory.hpp  RFParameter.hpp  RTParameter.hpp  RandomForest.hpp  RandomForrest.hpp  RandomTree.hpp  Sample.hpp  UniversalNodeFactory.cpp  UniversalNodeFactory.hpp  memory.hpp  types.hpp
code/source/cells/: BaseNode.hpp  BilateralNode.cpp  BilateralNode.hpp  BilateralNodeFactory.cpp  BilateralNodeFactory.hpp  CannyEdgeMoment00Node.cpp  CannyEdgeMoment00Node.hpp  CannyEdgeMoment00NodeFactory.cpp  CannyEdgeMoment00NodeFactory.hpp  CannyEdgeNode.cpp  CannyEdgeNode.hpp  CannyEdgeNodeFactory.cpp  CannyEdgeNodeFactory.hpp  CellLabel.cpp  CellLabel.hpp  CenterPixelNode.cpp  CenterPixelNode.hpp  CenterPixelNodeFactory.cpp  CenterPixelNodeFactory.hpp  ConfigParameter.hpp  GaborNode.cpp  GaborNode.hpp  GaborNodeFactory.cpp  GaborNodeFactory.hpp  GaussPyrNode.cpp  GaussPyrNode.hpp  GaussPyrNodeFactory.cpp  GaussPyrNodeFactory.hpp  GradientNode.cpp  GradientNode.hpp  GradientNodeFactory.cpp  GradientNodeFactory.hpp  Haar4WaveletNode.cpp  Haar4WaveletNode.hpp  Haar4WaveletNodeFactory.cpp  Haar4WaveletNodeFactory.hpp  HaarWaveletNode.cpp  HaarWaveletNode.hpp  HaarWaveletNodeFactory.cpp  HaarWaveletNodeFactory.hpp  (+68 more)
code/source/tools/: IOTools.hpp  ImageTools.hpp  utils.hpp
doc/design/: Diagramm1.dia  design.dia  dia2Code.bat
doc/report/: bibliography.bib  conclusion.tex  examples.tex  implementation.tex  introduction.tex  objective.tex  report.tex  results.tex
output/: 0.812-1435708130-0029-diff.tif  0.812-1435708130-0029-log.txt  0.812-1435708130-0029-overlay.tif  0.812-1435708130-0029-prop.tif  0.813-1435698685-0026-diff.tif  0.813-1435698685-0026-log.txt  0.813-1435698685-0026-overlay.tif  0.813-1435698685-0026-prop.tif  0.814-1435686647-0017-diff.tif  0.814-1435686647-0017-log.txt  0.814-1435686647-0017-overlay.tif  0.814-1435686647-0017-prop.tif  0.814-1435691528-0013-diff.tif  0.814-1435691528-0013-log.txt  0.814-1435691528-0013-overlay.tif  0.814-1435691528-0013-prop.tif  0.819-1435683959-0006-diff.tif  0.819-1435683959-0006-log.txt  0.819-1435683959-0006-overlay.tif  0.819-1435683959-0006-prop.tif  0.819-1435713205-0030-diff.tif  0.819-1435713205-0030-log.txt  0.819-1435713205-0030-overlay.tif  0.819-1435713205-0030-prop.tif  0.82-1435702739-0016-diff.tif  0.82-1435702739-0016-log.txt  0.82-1435702739-0016-overlay.tif  0.82-1435702739-0016-prop.tif  0.821-1435694611-0029-diff.tif  0.821-1435694611-0029-log.txt  0.821-1435694611-0029-overlay.tif  0.821-1435694611-0029-prop.tif  0.822-1435708849-0019-diff.tif  0.822-1435708849-0019-log.txt  0.822-1435708849-0019-overlay.tif  0.822-1435708849-0019-prop.tif  0.823-1435688723-0027-diff.tif  0.823-1435688723-0027-log.txt  0.823-1435688723-0027-overlay.tif  0.823-1435688723-0027-prop.tif  (+200 more)
